--- a/streamer-sale.html
+++ b/streamer-sale.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Your PlayNFT order confirmation - {{orderNumber}}</title>
+    <title>NFT Purchase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Open+Sans:400,600,700,300,300italic,400italic" rel="stylesheet" type="text/css" />
@@ -60,13 +60,7 @@
             <tr>
               <td align="center" valign="top" style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 34px; font-weight: 400; mso-line-height-rule:exactly; line-height:38px; margin: 0; padding: 0px 0px 6px 0px;
 " colspan="3">
-                Thanks for your order </td>
-            </tr>
-            <tr>
-              <td align="center" valign="top" style="padding: 0px 0px 26px 0px; border-bottom:1px solid #dfe5e9; color: #9c9c9c; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 18px; font-weight: 400; mso-line-height-rule:exactly; line-height:27px; margin: 0
-" colspan="3">
-                Order number: {{orderNumber}}
-              </td>
+                Congratulations! </td>
             </tr>
 
             <tr>
@@ -76,25 +70,33 @@
             </tr>
             <tr>
               <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:left" colspan="3">
-                Thank you for your purchase. Please find your order summary below. </td>
+                Your NFT, {{nftName}}, was purchased by {{buyerName}}. </td>
             </tr>
             <tr>
               <td align="center" valign="top" style="padding: 30px 30px 30px 30px; margin-bottom: 36px" bgcolor="#f9f9f9" colspan="3">
                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
                   <tr>
-                    <td colspan="3" style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; text-align:left; padding: 0px 0px 10px 0px;">Order summary</td>
+                    <td colspan="3" style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; text-align:left; padding: 0px 0px 10px 0px;">
+                        Balance summary
+                    </td>
                   </tr>
                   <tr>
                     <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:left;">
-                      100 Token Supply for NFT: <br/>{{nftName}}
+                      NFT Price: ${{nftPrice}}<br/>
                     </td>
-                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:right;">1</td>
-                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:right; ">${{orderPrice}}</td>
+                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:right;">
+                        80%
+                    </td>
+                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:right; ">
+                        ${{priceSplit}}
+                    </td>
                   </tr>
                   
                   <tr>
                     <td style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; border-top:1px solid #dfe5e9; padding: 10px 0px 0px 0px; text-align:left;" colspan="2">Total</td>
-                    <td style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; border-top:1px solid #dfe5e9; text-align:right; padding: 10px 0px 0px 0px;">${{orderPrice}}</td>
+                    <td style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; border-top:1px solid #dfe5e9; text-align:right; padding: 10px 0px 0px 0px;">
+                        ${{balance}}
+                    </td>
                   </tr>
                 </table>
               </td>
@@ -104,17 +106,8 @@
             </tr>
             <tr>
               <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:left" colspan="3">
-                Visit <a href="https://www.playnft.io/" style="color:#0085d8;">PlayNFT</a> and enter your Twitch credientials into the Streamer service to see the updated NFT supply.
+                Login on <a href="https://www.playnft.io/" style="color:#0085d8;">PlayNFT</a> to see your updated balance.
               </td>
-            </tr>
-            
-            <tr>
-              <td align="center" valign="top" style="padding: 24px 0px 6px 0px; color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 14px; font-weight: bold; mso-line-height-rule:exactly; line-height:21px; margin: 0; text-align:left" colspan="3">
-                Returns &#x0026; refunds </td>
-            </tr>
-            <tr>
-              <td align="center" valign="top" style="padding: 0; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 13px; font-weight: normal; mso-line-height-rule:exactly; line-height:19px; margin: 0; text-align:left" colspan="3">
-                All sales are final.</td>
             </tr>
 
             <tr>
