YouTube integration Solana mint added

--- a/collections/index.html
+++ b/collections/index.html
@@ -10,6 +10,17 @@
 
     <meta content="nft" name="keywords" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NTBHF6SC72"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NTBHF6SC72');
+</script>
+
+
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
     <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
@@ -40,7 +51,7 @@
         referrerpolicy="origin"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+    <script src="https://unpkg.com/moralis-v1@latest/dist/moralis.min.js"></script>
 
     <script>
         tinymce.init({
