--- a/nfts/index.html
+++ b/nfts/index.html
@@ -75,7 +75,7 @@
         <section id="section-streamers" class="gamers">
             <div class="container">
                 <header class="section-header">
-                    <h2>Twitch NFTs</h2>
+                    <h2>Creator NFTs</h2>
                     <p>NFT Inventory</p>
                 </header>
 
