--- a/creators/index.html
+++ b/creators/index.html
@@ -202,12 +202,15 @@
                 $("#tiktoker_list").hide();
                 if (chain == "streamer") {
                     $("#streamer_list").show();
+                    $('#streamer_list').css('display', 'flex');
                 }
                 if (chain == "youtuber") {
                     $("#youtuber_list").show();
+                    $('#youtuber_list').css('display', 'flex');
                 }
                 if (chain == "tiktoker") {
                     $("#tiktoker_list").show();
+                    $('#tiktoker_list').css('display', 'flex');
                 }
             });
         });
