--- a/nfts/index.html
+++ b/nfts/index.html
@@ -174,6 +174,13 @@
                                                         style="width:50px;padding-bottom: 10px;"
                                                         src="/assets/img/solana-sol-logo.svg" alt="Solana" /></label>
                                             </div>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" name="creators-chain"
+                                                    id="creators-chain-telos" value="telos">
+                                                <label class="form-check-label" for="creators-chain-telos"><img
+                                                        style="width:50px;padding-bottom: 10px;"
+                                                        src="/assets/img/telos.svg" alt="Telos" /></label>
+                                            </div>
                                         </div>
                                         <div class="row spacer-20">&nbsp;</div>
                                         <div class="row gy-4 chain-wallet" id="creators-wallet-enj">
@@ -202,6 +209,16 @@
                                                 <input type="text" name="walletAddressSolana"
                                                     id="twitch-walletAddressSolana" class="form-control wallet-address"
                                                     placeholder="Solana Wallet Address" required />
+                                            </div>
+                                            <div class="col-md-6 text-end">
+
+                                            </div>
+                                        </div>
+                                        <div class="row gy-4 chain-wallet" id="creators-wallet-telos">
+                                            <div class="col-md-6">
+                                                <input type="text" name="walletAddressTelos"
+                                                    id="twitch-walletAddressTelos" class="form-control wallet-address"
+                                                    placeholder="Telos Wallet Address" required />
                                             </div>
                                             <div class="col-md-6 text-end">
 
@@ -351,6 +368,10 @@
             walletID = $('#twitch-walletAddressSolana').val();
         }
 
+        if ($('input[name="creators-chain"]:checked').val() == "telos") {
+            walletID = $('#twitch-walletAddressTelos').val();
+        }
+
         let formData = { transactionId: transactionID, streamerId: streamerID, wallet: walletID, buyerId: buyerID, chain: chainID };
         console.log(formData)
         $.ajax({
@@ -425,6 +446,7 @@
                         if (item.chain == "enj") chain = "Enjin Jumpnet";
                         if (item.chain == "stx") chain = "Stacks";
                         if (item.chain == "solana") chain = "Solana";
+                        if (item.chain == "telos") chain = "Telos";
                     }
 
                     let game_content = { id: item.id, transactionId: item.transactionId, name: item.name, date: dateString, streamer: item.streamer, streamerId: item.streamerId, supply: item.supply, claimed: item.claimed, chain: chain };
