Adding Ethereum support

--- a/collections/index.html
+++ b/collections/index.html
@@ -137,6 +137,12 @@
                         <label class="form-check-label" for="creators-chain-stx"><img style="width:50px"
                             src="/assets/img/stacks-stx-logo.svg" alt="Stacks" /></label>
                       </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="creators-chain" id="creators-chain-eth"
+                          value="eth">
+                        <label class="form-check-label" for="creators-chain-eth"><img style="height:50px"
+                            src="/assets/img/ethereum-eth-logo.svg" alt="Ethereum" /></label>
+                      </div>
                     </div>
                     <div class="row spacer-20">&nbsp;</div>
                     <div class="row gy-4 chain-wallet" id="creators-wallet">
@@ -175,6 +181,10 @@
                     </div>
                     <div class="row gy-4 chain-wallet" id="creators-wallet-stx">
                         <div id="games_list_stx" class="card-deck collections" style="display:flex;flex-wrap: wrap;justify-content: center;">
+                        </div>
+                    </div>
+                    <div class="row gy-4 chain-wallet" id="creators-wallet-eth">
+                        <div id="games_list_eth" class="card-deck collections" style="display:flex;flex-wrap: wrap;justify-content: center;">
                         </div>
                     </div>
                     
