--- a/welcome-streamers.html
+++ b/welcome-streamers.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>NFT Purchase</title>
+    <title>PlayNFT Is Live: Create your NFT collection!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Open+Sans:400,600,700,300,300italic,400italic" rel="stylesheet" type="text/css" />
@@ -58,58 +58,45 @@
               </td>
             </tr>
             <tr>
-              <td style="padding: 0 0 24px 0" colspan="3"></td>
-            </tr>
+                <td style="padding: 0 0 24px 0" colspan="3"></td>
+              </tr>
             <tr>
               <td align="center" valign="top" style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 34px; font-weight: 400; mso-line-height-rule:exactly; line-height:38px; margin: 0; padding: 0px 0px 6px 0px;
 " colspan="3">
-                Congratulations! </td>
+PlayNFT Is Live! </td>
             </tr>
 
             <tr>
               <td align="center" valign="top" style="padding: 36px 0px 6px 0px; color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height:30px; margin: 0; text-align:left" colspan="3">
-                Hi {{name}},
+                Thank you for signing up to use PlayNFT!
               </td>
             </tr>
             <tr>
               <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:left" colspan="3">
-                Your NFT, {{nftName}}, was purchased by {{buyerName}}. </td>
+                Today, we're excited to launch our platform so you can do what you do best: <b>create</b>.</td>
             </tr>
             <tr>
-              <td align="center" valign="top" style="padding: 30px 30px 30px 30px; margin-bottom: 36px" bgcolor="#f9f9f9" colspan="3">
-                <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                  <tr>
-                    <td colspan="3" style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Lato; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; text-align:left; padding: 0px 0px 10px 0px;">
-                        Balance Summary
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:left;">
-                      NFT Price: ${{nftPrice}}<br/>
-                    </td>
-                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:right;">
-                        80%
-                    </td>
-                    <td style="color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 15px; font-weight: 400; mso-line-height-rule:exactly; line-height: 22px; margin: 0; text-align:right; ">
-                        ${{priceSplit}}
-                    </td>
-                  </tr>
-                  
-                  <tr>
-                    <td style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; border-top:1px solid #dfe5e9; padding: 10px 0px 0px 0px; text-align:left;" colspan="2">Total</td>
-                    <td style="color: #2b2b2b; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 20px; font-weight: 400; mso-line-height-rule:exactly; line-height: 30px; margin: 0; border-top:1px solid #dfe5e9; text-align:right; padding: 10px 0px 0px 0px;">
-                        ${{balance}}
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
+                <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:left" colspan="3">
+                    We've made it easy to build a collection of NFTs for your community—and link them up to games and apps.</td>
+              </tr>
+              <tr>
+                <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:left" colspan="3">
+                    We appreciate your support and can't wait to see what you create!</td>
+              </tr>
             <tr>
               <td style="padding: 0 0 24px 0" colspan="3"></td>
             </tr>
             <tr>
-              <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:left" colspan="3">
-                To view your updated balance and withdraw funds, log into your <a href="https://www.playnft.io/" style="color:#0085d8;">PlayNFT</a> account.
+              <td align="center" valign="top" style="padding: 0px 0px 24px 0px; color: #777777; font-family: Helvetica Neue,Helvetica,sans-serif,Open Sans; font-size: 17px; font-weight: 400; mso-line-height-rule:exactly; line-height:25px; margin: 0; text-align:center" colspan="3">
+                <button style="background:    #4154f1;
+                border-radius: 11px;
+                border: 0px;
+                padding:       20px 45px;
+                color:         #ffffff;
+                display:       inline-block;
+                font-size:          larger;
+                text-align:    center;
+                cursor: pointer;" onclick="location.href='http://playnft.io';">Create Your First NFT</button> 
               </td>
             </tr>
 
