--- a/index.html
+++ b/index.html
@@ -52,17 +52,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- External JS Files -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
-  <script src="https://kit.fontawesome.com/0a0492e97d.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/0a0492e97d.js" crossorigin="anonymous" defer></script>
   <script
-    src="https://www.paypal.com/sdk/js?client-id=Afublr47iUx9od__o9lROJup9U0wx74gtOgqlGi-xPG8hGRUggDp1497DSQTMaAN9hP5FspYXTg9bZu0"></script>
+    src="https://www.paypal.com/sdk/js?client-id=Afublr47iUx9od__o9lROJup9U0wx74gtOgqlGi-xPG8hGRUggDp1497DSQTMaAN9hP5FspYXTg9bZu0" defer></script>
 
   <script src="https://cdn.tiny.cloud/1/doicvbneaya0gerwmrc6gn0ei4uw3vsk4znmslowgfwri44v/tinymce/5/tinymce.min.js"
     referrerpolicy="origin"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src="https://unpkg.com/moralis-v1@latest/dist/moralis.min.js"></script>
-  <script src='https://unpkg.com/xrpl@2.1.0-beta.1'></script>
-  <script src="https://unpkg.com/@web3auth/web3auth@latest/dist/web3auth.umd.min.js"></script>
+  <script src='https://unpkg.com/xrpl@2.1.0-beta.1' defer></script>
 
   <script>
     tinymce.init({
@@ -146,15 +144,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Vendor JS Files -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
     integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+    crossorigin="anonymous" defer></script>
+  <script src="assets/vendor/aos/aos.js" defer></script>
+  <script src="assets/vendor/php-email-form/validate.js" defer></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter.js" defer></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- App JS Files -->
