--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="assets/css/style.css" rel="stylesheet" />
 
   <!-- External JS Files -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="assets/js/jquery-3.6.1.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
   <script src="https://kit.fontawesome.com/0a0492e97d.js" crossorigin="anonymous" defer></script>
   <script
