--- a/nfts/index.html
+++ b/nfts/index.html
@@ -209,6 +209,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                         style="width:50px;padding-bottom: 10px;"
                                                         src="/assets/img/evmos.svg" alt="Evmos" /></label>
                                             </div>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" name="creators-chain"
+                                                    id="creators-chain-tron" value="tron">
+                                                <label class="form-check-label" for="creators-chain-tron"><img
+                                                        style="width:50px;padding-bottom: 10px;"
+                                                        src="/assets/img/tron.svg" alt="Tron" /></label>
+                                            </div>
                                         </div>
                                         <div class="row spacer-20">&nbsp;</div>
                                         <div class="row gy-4 chain-wallet" id="creators-wallet-enj">
@@ -274,6 +281,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </div>
                                             <div class="col-md-6 text-end">
                                                 <button id="creators-evmos-wallet-connect" class="btn btn-primary" type="button">
+                                                    Connect with Metamask
+                                                  </button>
+                                            </div>
+                                        </div>
+                                        <div class="row gy-4 chain-wallet" id="creators-wallet-tron">
+                                            <div class="col-md-6">
+                                                <input type="text" name="walletAddressEvmos"
+                                                    id="twitch-walletAddressTron" class="form-control wallet-address"
+                                                    placeholder="Tron Wallet Address" required />
+                                            </div>
+                                            <div class="col-md-6 text-end">
+                                                <button id="creators-tron-wallet-connect" class="btn btn-primary" type="button">
                                                     Connect with Metamask
                                                   </button>
                                             </div>
