--- a/account/index.html
+++ b/account/index.html
@@ -540,7 +540,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         if (streamerName != "Google User") {
                                             $("#add-youtube").hide();
                                             $("#youtube-container").removeClass("d-none");
-                                            $("#youtube-url").html(`<a target="_blank" href="http://playnft.io/y/?${streamerName}">http://playnft.io/y/?${streamerName}</a>`)
+                                            $("#youtube-url").html(`<a target="_blank" href="https://www.playnft.io/y/?${streamerName}">https://www.playnft.io/y/?${streamerName}</a>`)
                                         }
                                     },
                                 });
@@ -617,7 +617,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                                         $("#add-twitch").hide();
                                         $("#twitch-container").removeClass("d-none");
-                                        $("#streamer-url").html(`<a target="_blank" href="http://playnft.io/s/?${streamerName}">http://playnft.io/s/?${streamerName}</a>`)
+                                        $("#streamer-url").html(`<a target="_blank" href="https://www.playnft.io/s/?${streamerName}">https://www.playnft.io/s/?${streamerName}</a>`)
                                     },
                                 });
 
